Removed item from todo list. Fixed link hover that was too dark.

--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -2,6 +2,7 @@
 @brand-primary: #fa0;
 @text-color: #fff;
 @grid-gutter-width: 10px;
+@link-hover-color: @brand-primary;
 
 /* project variables */
 @gutter-size: floor((@grid-gutter-width / 2));
